fix navbar overflow issue

--- a/src/common/components/navbar/Navbar.less
+++ b/src/common/components/navbar/Navbar.less
@@ -7,6 +7,7 @@
 	margin-bottom: 8px;
 	display: flex;
 	color: #fff;
+	overflow: hidden;
 
 	.navbar-item {
 		width: 320px;
